<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="?attr/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/select_players_title" />

    <TextView
        android:id="@+id/playersEmpty"
        style="?attr/titleEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:text="@string/score_players_will_be_here"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="@dimen/large_margin"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/item_select_player"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        style="?attr/buttonPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonPrimaryHeight"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/select_players_apply" />

</LinearLayout>