<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/title"
        style="?attr/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/players_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playersEmpty"
        style="?attr/titleEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:text="@string/score_players_will_be_here"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.4"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:itemCount="5"
        tools:listitem="@layout/item_player"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_top_rounded"
        android:orientation="vertical"
        android:paddingTop="@dimen/large_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/newPlayerName"
            style="?attr/inputFilled"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_filled_height"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:hint="@string/score_name_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:text="Maxim" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addPlayer"
            style="?attr/buttonPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonPrimaryHeight"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginVertical="@dimen/small_margin"
            android:text="@string/score_add_player" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>